Non optimized version t3 library. Used with ESP8266

--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,10 @@
-name=ILI9341_t3
-version=1.0
-author=Limor Fried, Adafruit, Paul Stoffregen
-maintainer=Paul Stoffregen
+name=ILI9341_ESP
+version=1.0.0
+author=Limor Fried, Adafruit, Paul Stoffregen, Vita Tucek
+maintainer=Vita Tucek
 sentence=Optimized ILI9341 (320x240 Color TFT) Display
 paragraph=
 category=Display
-url=https://github.com/PaulStoffregen/ILI9341_t3
+url=https://github.com/docbender/ILI9341_t3
 architectures=*
 
